--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,5 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/database1
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 
+#spring.flyway.clean-disabled=false
+#spring.flyway.baseline-on-migrate=true
